--- a/skills.html
+++ b/skills.html
@@ -80,17 +80,18 @@
             </div>
           </div>
             </div>
-            <div class="container lessons" >
-
-              <div class="row info-row d-flex justify-content-center align-items-center">              
-                <h1 class="banner" id="green">What I learned</h1>
-                <div class="skills-image col-12 col-lg-6" id="learn"></div>
-                <div class="skills-text col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
-                  <h1 class="text-center info-title" id="change-title">How it Helped</h1>
-                  <div class="info-section text-center">Click an icon above to see more info!</div>
+            <section class="lessons-section">
+              <div class="container lessons">
+                <div class="row info-row d-flex justify-content-center align-items-center">              
+                  <h1 class="banner" id="green">What I learned</h1>
+                  <div class="skills-image col-12 col-lg-6" id="learn"></div>
+                  <div class="skills-text col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
+                    <h1 class="text-center info-title" id="change-title">How it Helped</h1>
+                    <div class="info-section text-center">Click an icon above to see more info!</div>
+                  </div>
                 </div>
-            </div>
-            </div>
+              </div>
+            </section>
             <h1 class="banner">Video Equipment</h1>
             <h3 class="instruction text-center">These are the pieces of equipment I'm familiar with since I starting videography</h3>
 
