adjusted headshot image

--- a/contact.html
+++ b/contact.html
@@ -25,24 +25,28 @@
     <body>
         <header>
             <!-- place navbar here -->
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html" id="logo"></a>
-              
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon justify-content-center"></span>
-                  </button>
-              
-                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                      <li class="nav-item"><a class="nav-link text-light" href="index.html">My Story</a></li>
-                      <li class="nav-item"><a class="nav-link  text-light" href="skills.html">Skills</a></li>
-                      <li class="nav-item"><a class="nav-link text-light" href="contact.html">Contact Me</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+<nav class="navbar navbar-expand-lg sticky-top custom-navbar shadow-sm">
+  <div class="container-fluid">
+    <!-- Logo (optional) -->
+    <a class="navbar-brand text-white fw-bold" href="index.html" id="logo"></a>
+
+    <!-- Toggler -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Menu -->
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll">
+        <li class="nav-item"><a class="nav-link custom-link" href="index.html">My Story</a></li>
+        <li class="nav-item"><a class="nav-link custom-link" href="skills.html">Skills</a></li>
+        <li class="nav-item"><a class="nav-link custom-link" href="contact.html">Contact Me</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
         </header>
         <main>
           <h1 class="banner text-align-center justify-content-center mb-5" id="form">Contact Me</h1>
