making more adjustments to the highlights

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="image__title">{{ site.title }}</div>
                         <p class="image__description">
                           <a :href="site.link" target="_blank" rel="noopener noreferrer">
-                            <button class="button-23" role="button">Learn More</button>
+                            <button class="button-23" role="button">View Video</button>
                           </a>
                         </p>
                       </div>
