--- a/contact.html
+++ b/contact.html
@@ -20,32 +20,34 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
         <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     </head>
 
     <body>
         <header>
             <!-- place navbar here -->
-<nav class="navbar navbar-expand-lg sticky-top custom-navbar shadow-sm">
-  <div class="container-fluid">
-    <!-- Logo (optional) -->
-    <a class="navbar-brand text-white fw-bold" href="index.html" id="logo"></a>
+    <nav class="navbar navbar-expand-lg sticky-top custom-navbar shadow-sm">
+      <div class="container-fluid">
+        <!-- Logo (optional) -->
+        <a class="navbar-brand text-white fw-bold" href="index.html" id="logo"></a>
 
-    <!-- Toggler -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <!-- Toggler -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Menu -->
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll">
-        <li class="nav-item"><a class="nav-link custom-link" href="index.html">My Story</a></li>
-        <li class="nav-item"><a class="nav-link custom-link" href="skills.html">Skills</a></li>
-        <li class="nav-item"><a class="nav-link custom-link" href="contact.html">Contact Me</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll">
+            <li class="nav-item"><a class="nav-link custom-link" href="index.html">My Story</a></li>
+            <li class="nav-item"><a class="nav-link custom-link" href="skills.html">Skills</a></li>
+            <li class="nav-item"><a class="nav-link custom-link" href="contact.html">Contact Me</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
         </header>
         <main>
@@ -74,27 +76,27 @@
             </div>
 
             <!-- Reason -->
-            <div class="col-12">
-              <div class="p-3 rounded mb-3" style="background-color: #c0d1bd;">
-                <label class="form-label mb-2">Reason for reaching out today:</label>
-                <div class="row">
-                  <div class="col-md-4">
-                    <div><input type="radio" name="reason" value="Service Questions" /> Service Questions</div>
-                    <div><input type="radio" name="reason" value="Personal video" /> Personal video</div>
-                    <div><input type="radio" name="reason" value="Blogs" /> Blogs</div>
-                  </div>
-                  <div class="col-md-4">
-                    <div><input type="radio" name="reason" value="Montages" /> Montages</div>
-                    <div><input type="radio" name="reason" value="Repair/Service" /> Video Editing</div>
-                    <div><input type="radio" name="reason" value="Wedding Videos" /> Wedding Videos</div>
-                  </div>
-                  <div class="col-md-4">
-                    <div><input type="radio" name="reason" value="Product Shoot" /> Product Shoot</div>
-                    <div><input type="radio" name="reason" value="Other Installation" /> Other (Specify)</div>
-                  </div>
-                </div>
-              </div>
-            </div>
+<div class="col-12">
+  <div class="p-3 rounded mb-3" style="background-color: #c0d1bd; color: white;">
+    <label class="form-label mb-2" style="color: white;">Reason for reaching out today:</label>
+    <div class="row">
+      <div class="col-md-4">
+        <div><input type="radio" name="reason" value="Service Questions" /> <span>Service Questions</span></div>
+        <div><input type="radio" name="reason" value="Personal video" /> <span>Personal video</span></div>
+        <div><input type="radio" name="reason" value="Blogs" /> <span>Blogs</span></div>
+      </div>
+      <div class="col-md-4">
+        <div><input type="radio" name="reason" value="Montages" /> <span>Montages</span></div>
+        <div><input type="radio" name="reason" value="Repair/Service" /> <span>Video Editing</span></div>
+        <div><input type="radio" name="reason" value="Wedding Videos" /> <span>Wedding Videos</span></div>
+      </div>
+      <div class="col-md-4">
+        <div><input type="radio" name="reason" value="Product Shoot" /> <span>Product Shoot</span></div>
+        <div><input type="radio" name="reason" value="Other Installation" /> <span>Other (Specify)</span></div>
+      </div>
+    </div>
+  </div>
+</div>
 
             <!-- Message -->
             <div class="col-12 mb-3">
@@ -141,7 +143,7 @@
           </div>
           <div>
             <h6 class="mb-0 text-white">Follow Me</h6>
-            <p class="mb-0"><a href="#" class="text-white text-decoration-none">@instagramaccount</a></p>
+            <p class="mb-0"><a href="#" class="text-white text-decoration-none">@daniela_dimartino</a></p>
           </div>
         </div>
       </div>
@@ -149,124 +151,54 @@
   </div>
 </section>
         </main>
-      <!-- Footer -->
-<footer class="text-center text-lg-start text-muted">
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
-    </div>
-    <!-- Left -->
+<button onclick="topFunction()" id="myBtn" title="Go to top">
+  <i class="fas fa-chevron-up"></i>
+</button>
+       <!-- Footer -->
+  <footer class="text-center" style="background-color: #9EB69E;">
+  <!-- Grid container -->
+  <div class="container pt-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
 
-    <!-- Right -->
-    <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
+      <!-- Google -->
+      <a
+        data-mdb-ripple-init
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="#!"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-google"></i
+      ></a>
 
-  <!-- Section: Links  -->
-  <section class="">
-    <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
-          </h6>
-          <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
-          </p>
-        </div>
-        <!-- Grid column -->
+      <!-- Instagram -->
+      <a
+        data-mdb-ripple-init
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="#!"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-instagram"></i
+      ></a>
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Products
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Angular</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">React</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Vue</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Laravel</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
-          </p>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-          <p>
-            <i class="fas fa-envelope me-3"></i>
-            info@example.com
-          </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-        </div>
-        <!-- Grid column -->
-      </div>
-      <!-- Grid row -->
-    </div>
-  </section>
-  <!-- Section: Links  -->
+      <!-- Linkedin -->
+      <a
+        data-mdb-ripple-init
+        class="btn btn-link btn-floating btn-lg text-body m-1"
+        href="#!"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fab fa-linkedin"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center p-3 text-light" style="background-color: #9EB69E;">
+    © 2025 Copyright:
+    <a class="text-light" href="https://mdbootstrap.com/">Daniela DiMartino</a>
   </div>
   <!-- Copyright -->
 </footer>
@@ -283,5 +215,6 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+        <script src="script.js"></script>
     </body>
 </html>
