--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>About Me</title>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="img/Asset 1 (1).svg">
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 
@@ -147,60 +148,42 @@
     </div>
   </main>
   <!--Back to top button https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
-<button onclick="topFunction()" id="myBtn" title="Go to top">
-  <i class="fas fa-chevron-up"></i>
-</button>  <!-- Footer -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <i class="fas fa-chevron-up"></i>
+  </button> <!-- Footer -->
   <footer class="text-center" style="background-color: #9EB69E;">
-  <!-- Grid container -->
-  <div class="container pt-4">
-    <!-- Section: Social media -->
-    <section class="mb-4">
+    <!-- Grid container -->
+    <div class="container pt-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
 
 
 
-      <!-- Google -->
-      <a
-        data-mdb-ripple-init
-        class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-google"></i
-      ></a>
+        <!-- Google -->
+        <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
+          data-mdb-ripple-color="dark"><i class="fab fa-google"></i></a>
 
-      <!-- Instagram -->
-      <a
-        data-mdb-ripple-init
-        class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-instagram"></i
-      ></a>
+        <!-- Instagram -->
+        <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
+          data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
 
-      <!-- Linkedin -->
-      <a
-        data-mdb-ripple-init
-        class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-linkedin"></i
-      ></a>
-      <!-- Github -->
-     
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
+        <!-- Linkedin -->
+        <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="#!" role="button"
+          data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
+        <!-- Github -->
 
-  <!-- Copyright -->
-  <div class="text-center p-3 text-light" style="background-color: #9EB69E;">
-    © 2025 Copyright:
-    <a class="text-light" href="https://mdbootstrap.com/">Daniela DiMartino</a>
-  </div>
-  <!-- Copyright -->
-</footer>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3 text-light" style="background-color: #9EB69E;">
+      © 2025 Copyright:
+      <a class="text-light" href="https://mdbootstrap.com/">Daniela DiMartino</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
   <!-- Footer -->
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://unpkg.com/vue@3"></script>
